# geda-gaf

./: .config.h.kate-swp  .dir-locals.el  .gitattributes  .gitignore  .kateconfig  .travis.yml  AUTHORS  ChangeLog  ChangeLog-1.0  Makefile.am  NEWS  README  RedrawTests.gnumeric  UndoTests.gnumeric  acinclude.m4  autogen.sh  configure.ac  configure.scan  grep  gtklib.txt  travis-after-failure.sh  version.h  version.h.in
bitmaps/: .gitignore  Makefile.am  README  gaf_pdf_128x128.xpm  gaf_pdf_22x22.xpm  gaf_pdf_24x24.xpm  gaf_pdf_26x26.xpm  gaf_pdf_28x28.xpm  gaf_pdf_32x32.xpm  gaf_tools_128x128.xpm  gaf_tools_22x22.xpm  gaf_tools_24x24.xpm  gaf_tools_26x26.xpm  gaf_tools_28x28.xpm  gaf_tools_32x32.xpm  geda_arc_22x22.xpm  geda_arc_24x24.xpm  geda_arc_26x26.xpm  geda_arc_28x28.xpm  geda_arc_32x32.xpm  geda_box_22x22.xpm  geda_box_24x24.xpm  geda_box_26x26.xpm  geda_box_28x28.xpm  geda_box_32x32.xpm  geda_circle_22x22.xpm  geda_circle_24x24.xpm  geda_circle_26x26.xpm  geda_circle_28x28.xpm  geda_circle_32x32.xpm  geda_demote_22x22.xpm  geda_demote_24x24.xpm  geda_demote_26x26.xpm  geda_demote_28x28.xpm  geda_demote_32x32.xpm  geda_demote_36x36.xpm  geda_demote_48x48.xpm  geda_demote_64x64.xpm  geda_display_color_128x128.xpm  geda_display_color_22x22.xpm  (+104 more)
bitmaps/prog/: .gitignore  geda_gaf_bitmaps.ods
docs/: .gitignore  ChangeLog-1.0  Makefile.am  geda-main.txt  geda.dox
docs/images/: Makefile.am
docs/scheme-api/: Makefile.am  geda-scheme.texi
docs/specifications/: config-api.txt
docs/symbols/: Makefile.am  geda.pic
docs/wiki/: Makefile.am  best_practices.html  geda-bom_readme.html  geda-bug_triage_guide.html  geda-circuit_simulation_improvements.html  geda-covered_mp.html  geda-csygas.html  geda-cygwin.html  geda-data_plotting_improvements.html  geda-data_structure_design_discussion.html  geda-debian.fr.html  geda-debian.html  geda-design_flow_and_hierarchy_roadmap.html  geda-design_flow_roadmap.html  geda-devel-tips.html  geda-developer.html  geda-devmacosx.html  geda-documentation.fr.html  geda-documentation.html  geda-download.html  geda-eagle_pcb_netlister_readme.html  geda-example_hsm.html  geda-example_usbjtag.html  geda-experiences.html  geda-faq-attribs.fr.html  geda-faq-attribs.html  geda-faq-gnetlist.fr.html  geda-faq-gnetlist.html  geda-faq-gnetlist.ru.html  geda-faq-gsch2pcb.fr.html  geda-faq-gsch2pcb.html  geda-faq-gschem.fr.html  geda-faq-gschem.html  geda-faq-gschem.ru.html  geda-faq-pcb.html  geda-faq-simulation.fr.html  geda-faq-simulation.html  geda-faq.fr.html  geda-faq.html  geda-fbabgapp.html  (+130 more)
examples/: ChangeLog-1.0  Makefile.am  README
examples/CascodeAmp/: CascodeAmp-geda.net  CascodeAmp.cir  CascodeAmp.sch  CascodeAmp2.cir  Makefile.am  Simulation.cmd  jfet_bias_iv.cir
examples/MSA-2643/: .gitignore  MSA-2643.cir  MSA-2643.sch  Makefile.am  Q1.cir  Q1.sch  Q2.cir  Q2.sch  gafrc
examples/RF_Amp/: .gitignore  MSA-2643.sch  Makefile.am  Q1.sch  Q2.sch
examples/TwoStageAmp/: .gitignore  Makefile.am  TwoStageAmp.sch  attribs  spice.netlist
examples/gTAG/: .gitignore  7414-gt.sym  CY7C64603-52NC.sym  ChangeLog-1.0  Makefile.am  README  crdist.sh  gTAG-consio.sch  gTAG-geda.net  gTAG-jtagio.sch  gTAG-pcb.net  gTAG-psu.sch  gTAG-ucont.sch  gTAG.brd  gTAG.sch  gafrc
examples/lightning_detector/: .gitignore  Makefile.am  lightning.sch  lightning.sch.bom  lightning_bom.csv  lightning_detector-bom.csv  lightning_detector-geda.net  lightning_detector.net  lightning_detector.pcb  lightning_detector.sch  lightning_detector.xy  revision-history.txt  schbom
gaf/: .gitignore  ChangeLog-1.0  Makefile.am  export.c  gaf.c  shell.c
gaf/docs/: Makefile.am  gaf.1.in
gaf/include/: Makefile.am  builtins.h  gaf_getopt.h
gaf/po/: .gitignore  Makevars  POTFILES.in  it.po  nl.po  ru.po
gaf/src/: Makefile.am  config.c  export.c  gaf.c  gaf_getopt.c  path.c  shell.c
gattrib/: BUGS  ChangeLog-1.0  Makefile.am  NOTES  README  ToDos  attribs.sch  attribs2.sch  ce_amplifier2.sch  untitled
gattrib/data/: Makefile.am  gattrib.applications  geda-gattrib.desktop.in
gattrib/docs/: Makefile.am  gattrib-main.txt  gattrib.1  gattrib.1.in  gattrib.dox  what-is-gattrib.tex
gattrib/etc/: Makefile.am  gattrib-menus.xml  system-gattribrc.in
gattrib/include/: .prototype.h.kate-swp  Makefile.am  g_rc.h  gattrib.h  gattrib_dialog.h  gettext.h  globals.h  gtkitementry.h  gtksheet.h  gtksheetwidget.h  i_vars.h  prototype.h  struct.h  x_states.h
gattrib/lib/: gattrib-menus.xml
gattrib/po/: .gitignore  LINGUAS  POTFILES.in  af.po  ar.po  bg.po  bs.po  ca.po  da.po  de.po  el.po  en_GB.po  es.po  fa.po  fi.po  fr.po  gl.po  he.po  hu.po  it.po  ja.po  ml.po  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ru.po  sl.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po  zh_TW.po
gattrib/src/: Makefile.am  f_export.c  g_rc.c  g_register.c  g_strings.c  g_util.c  gattrib.c  (+24 more)
gschem/: .ChangeLog-1.0.kate-swp  .gitignore  BUGS  ChangeLog-1.0  Makefile.am  TODO
gsymcheck/: BUGS  ChangeLog-1.0  Makefile.am
include/: .gitignore  ChangeLog-1.0  Makefile.am  ansi.h  ascii.h  geda.h  geda_bitmaps.h  geda_debug.h  geda_diagnostics.h  geda_dialog_controls.h  geda_enum.h  geda_gui_funcs.h  geda_idefines.h  geda_macros.h  geda_sdefines.h  geda_standard.h  geda_stat.h  geda_struct.h  geda_system.h  geda_toolbars.h  geda_types.h  geda_wrap.h  gettext.h  missing.h  valgrind.h  x_dialog_controls.h
libgeda/: .gitignore  BUGS  ChangeLog-1.0  HACKING  Makefile.am  TODO
libgedacairo/: .gitignore  ChangeLog-1.0  Makefile.am  README  edarenderer.c  edarenderer.h
libgedacolor/: .gitignore  BUGS  ChangeLog-1.0  Makefile.am  README  libgedacolor.pc  libgedacolor.pc.in
libgedadraw/: .gitignore  BUGS  ChangeLog-1.0  Makefile.am  README  libgedadraw.pc.in
libgedathon/: .gitignore  ChangeLog-1.0  Makefile.am  README  geda.pc.in  libgedathon.pc.in
libgedauio/: .gitignore  ChangeLog-1.0  Makefile.am  README  libgedauio.pc.in
symbols/: .gitignore  ChangeLog-1.0  Makefile.am  geda-clib.scm  symbolerr.txt
utils/: .gitignore  ChangeLog-1.0  ChangeLog.gsch2pcb-1.0  ChangeLog.tragesym-1.0  Makefile.am
(+26965 files in other folders)
